k8s.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-lab
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360s"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 100m
  #  #nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #  #nginx.ingress.kubernetes.io/use-regex: "true"
  #  nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - secretName: seo19.net
      hosts:
        - nodejs-lab.seo19.net
  rules:
    - host: nodejs-lab.seo19.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-lab
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-lab
spec:
  type: NodePort
  ports:
    - name: nodejs-lab
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    name: nodejs-lab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-lab
spec:
  selector:
    matchLabels:
      name: nodejs-lab
  replicas: 1
  template:
    metadata:
      labels:
        name: nodejs-lab
    spec:
      containers:
      - name: nodejs-lab
        image: r19750927/websocket:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
